# projeto_de_dados

./: Dockerfile  README.md  boi_gordo.parquet  pyproject.toml  requirements.txt
.astro/: config.yaml  test_dag_integrity_default.py
archive/: boi_gordo.parquet
dags/: etl_boigordo.py  exampledag.py
include/: extract.py  load.py  main.py  transform.py
tests/dags/: test_dag_example.py
tests/etl/: test_extract.py  teste_boi_gordo_base.csv
