[tool.poetry]
name = "processo-dados"
version = "0.1.0"
description = ""
authors = ["FernandoMS4 <fernando381046@gmail.com>"]
readme = "README.md"
packages = [
    { include = "include" }
]

[tool.poetry.dependencies]
python = ">=3.11"
requests = "^2.32.3"
pandas = "^2.2.3"
pytest = "^8.3.5"
openpyxl = "^3.1.5"
blue = "^0.9.1"
pyarrow = "^20.0.0"
fastparquet = "^2024.11.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
